--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "http://pruthvz.github.io/project-atlas",
   "name": "project-a",
   "version": "0.1.0",
   "private": true,
