--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-up": "^1.3.7",
+    "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
